--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>The Real Naked Swedish Chef</title>
 
   <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Your custom styles -->
   <link rel="stylesheet" href="public/styles/main.css">
@@ -26,7 +26,8 @@
   <div id="footer-placeholder"></div>
 
   <!-- Bootstrap JS and Popper.js -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="node_modules/@popperjs/core/dist/cjs/popper.js"></script>
+  <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
   <!-- Your custom scripts -->
   <script src="/public/scripts/main.js"></script>
