--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <title>The Real Naked Swedish Chef</title>
 
   <!-- Bootstrap CSS -->
-  <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Your custom styles -->
-  <link rel="stylesheet" href="public/styles/main.css">
+  <link rel="stylesheet" href="../public/styles/main.css">
 </head>
 <body>
   <!-- Include header -->
@@ -19,17 +19,17 @@
   <main>
     <h1>Welcome to The Real Naked Swedish Chef</h1>
     <p>Discover healthy, trusted recipes for type 2 diabetes and everyone.</p>
-    <img src="public/images/trnsc_image.jpeg" alt="The Real Naked Swedish Chef">
+    <img src="../public/images/trnsc_image.jpeg" alt="The Real Naked Swedish Chef">
   </main>
 
   <!-- Include footer -->
   <div id="footer-placeholder"></div>
 
   <!-- Bootstrap JS and Popper.js -->
-  <script src="node_modules/@popperjs/core/dist/cjs/popper.js"></script>
-  <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="../node_modules/@popperjs/core/dist/cjs/popper.js"></script>
+  <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
   <!-- Your custom scripts -->
-  <script src="/public/scripts/main.js"></script>
+  <script src="../public/scripts/main.js"></script>
 </body>
 </html>
