--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <link rel="manifest" href="../public/site.webmanifest">
 
   <!-- Bootstrap CSS -->
-  <link href="../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../public/styles/bootstrap.min.css" rel="stylesheet">
 
   <!-- Your custom styles -->
   <link rel="stylesheet" href="../public/styles/main.css">
@@ -59,8 +59,8 @@
   <div id="footer-placeholder"></div>
 
   <!-- Bootstrap JS and Popper.js -->
-  <script src="../node_modules/@popperjs/core/dist/cjs/popper.js"></script>
-  <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="../public/scripts/popper.js"></script>
+  <script src="../public/scripts/bootstrap.min.js"></script>
 
   <!-- Your custom scripts -->
   <script src="../public/scripts/main.js"></script>
