Adjusted index, about and healthy tips

--- a/index.html
+++ b/index.html
@@ -49,11 +49,31 @@
   <div id="header-placeholder"></div>
 
   <!-- Main content -->
-  <main>
-    <h1>Welcome to The Real Naked Swedish Chef</h1>
-    <p>Discover healthy, trusted recipes for type 2 diabetes and everyone.</p>
-    <img src="../public/images/trnsc_image.jpeg" alt="The Real Naked Swedish Chef">
-  </main>
+<main class="container py-4">
+  <!-- Banner Section -->
+  <div class="banner text-center py-3 mb-4">
+    <h2>New - Fresh Food - Fresh Ideas - Fresh Health</h2>
+  </div>
+
+  <!-- Content Section -->
+  <div class="row">
+    <!-- Left Side: Image -->
+    <div class="col-md-6 d-flex align-items-center justify-content-center">
+      <img src="/public/images/trnsc_image.jpeg" alt="The Real Naked Swedish Chef" class="img-fluid rounded shadow" />
+    </div>
+
+    <!-- Right Side: Text with Pale Background -->
+    <div class="col-md-6 right-side-container">
+      <h2>I'm Swedish, I'm Naked, But I'm Not A Chef...</h2>
+      <p>
+        Welcome to The Real Naked Swedish Chef (not a chef), a site set up and designed to help you and your family be
+        healthier while enjoying your food. This site is safe for those with Type 2 Diabetes and, therefore, perfect for
+        the whole family.
+      </p>
+      <a href="../views/about.html" class="btn btn-outline-success">Learn More Here</a>
+    </div>
+
+</main>
 
   <!-- Include footer -->
   <div id="footer-placeholder"></div>
