Fixed URL locations

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Meta tags for social media (Open Graph & Twitter Cards) -->
   <meta property="og:title" content="The Real Naked Swedish Chef" />
   <meta property="og:description" content="Healthy, trusted recipes suited for type 2 diabetes and everyone." />
-  <meta property="og:image" content="../public/images/trnsc_image.jpeg" /> <!-- Update the image path -->
+  <meta property="og:image" content="/public/images/trnsc_image.jpeg" /> <!-- Update the image path -->
   <meta property="og:url" content="https://realnakedswedishchef.net" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="The Real Naked Swedish Chef" />
@@ -16,18 +16,18 @@
   <meta name="twitter:image" content="/public/images/trnsc_image.jpeg" /> <!-- Update the image path -->
 
   <!-- Favicon -->
-  <link rel="icon" href="../public/favicon.ico" type="image/x-icon">
-  <link rel="shortcut icon" href="../public/favicon.ico" type="image/x-icon">
-  <link rel="apple-touch-icon" sizes="180x180" href="../public/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="../public/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="../public/favicon-16x16.png">
-  <link rel="manifest" href="../public/site.webmanifest">
+  <link rel="icon" href="/public/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="/public/favicon.ico" type="image/x-icon">
+  <link rel="apple-touch-icon" sizes="180x180" href="/public/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/public/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/public/favicon-16x16.png">
+  <link rel="manifest" href="/public/site.webmanifest">
 
   <!-- Bootstrap CSS -->
-  <link href="../public/styles/bootstrap.min.css" rel="stylesheet">
+  <link href="/public/styles/bootstrap.min.css" rel="stylesheet">
 
   <!-- Your custom styles -->
-  <link rel="stylesheet" href="../public/styles/main.css">
+  <link rel="stylesheet" href="/public/styles/main.css">
 
   <!-- SEO Meta Tags -->
   <meta name="description"
@@ -50,10 +50,6 @@
 
   <!-- Main content -->
 <main class="container py-4">
-  <!-- Banner Section -->
-  <div class="banner text-center py-3 mb-4">
-    <h2>New - Fresh Food - Fresh Ideas - Fresh Health</h2>
-  </div>
 
   <!-- Content Section -->
   <div class="row">
@@ -70,7 +66,7 @@
         healthier while enjoying your food. This site is safe for those with Type 2 Diabetes and, therefore, perfect for
         the whole family.
       </p>
-      <a href="../views/about.html" class="btn btn-outline-success">Learn More Here</a>
+      <a href="/views/about.html" class="btn btn-outline-success">Learn More Here</a>
     </div>
 
 </main>
@@ -79,10 +75,10 @@
   <div id="footer-placeholder"></div>
 
   <!-- Bootstrap JS and Popper.js -->
-  <script src="../node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
-  <script src="../public/scripts/bootstrap.min.js"></script>
+  <script src="/node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
+  <script src="/public/scripts/bootstrap.min.js"></script>
 
   <!-- Your custom scripts -->
-  <script src="../public/scripts/main.js"></script>
+  <script src="/public/scripts/main.js"></script>
 </body>
 </html>
