--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
   <link rel="manifest" href="/public/site.webmanifest">
 
   <!-- Bootstrap CSS -->
-  <link href="/public/styles/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
   <!-- Your custom styles -->
   <link rel="stylesheet" href="/public/styles/main.css">
@@ -75,8 +76,8 @@
   <div id="footer-placeholder"></div>
 
   <!-- Bootstrap JS and Popper.js -->
-  <script src="/node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
-  <script src="/public/scripts/bootstrap.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
   <!-- Your custom scripts -->
   <script src="/public/scripts/main.js"></script>
