Adjusted index to have links to articles and recipes

--- a/index.html
+++ b/index.html
@@ -70,6 +70,22 @@
         the whole family.
       </p>
       <a href="/views/about.html" class="btn btn-outline-success">Learn More Here</a>
+    
+      <!-- New section for latest articles -->
+      <div id="latest-articles" class="mt-4">
+        <h4>Latest Articles</h4>
+        <ul class="list-group" id="latest-articles-list">
+          <!-- JS will populate this list -->
+        </ul>
+      </div>
+    </div>
+
+    <!-- New Section for Latest Items -->
+    <div id="latest-items" class="py-4 mt-3 right-side-container">
+      <h3>Newest Recipes</h3>
+      <ul class="list-group" id="latest-items-list">
+        <!-- JS will populate this list -->
+      </ul>
     </div>
 
 </main>
@@ -83,5 +99,11 @@
 
   <!-- Your custom scripts -->
   <script src="/public/scripts/main.js"></script>
+  <!-- Include necessary scripts -->
+  <script src="/public/scripts/recipes/recipes_objects.js"></script>
+  <script src="/public/scripts/science/science_objects.js"></script>
+  <script src="/public/scripts/kitchen_tips/kitchen_tips_objects.js"></script>
+  <script src="/public/scripts/healthy_tips/health_tips_objects.js"></script>
+  <script src="/public/scripts/index/index.js"></script>
 </body>
 </html>
