--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
 
     <!-- Right Side: Text with Pale Background -->
     <div class="col-md-6 right-side-container">
-      <h2>I'm Swedish, I'm Naked, But I'm Not A Chef...</h2>
-      <p>
-        Welcome to The Real Naked Swedish Chef (not a chef), a site set up and designed to help you and your family be
-        healthier while enjoying your food. This site is safe for those with Type 2 Diabetes and, therefore, perfect for
-        the whole family.
-      </p>
+      <p class="mt-3">
+        And when I’m not burning cabbage or making low-carb pancakes, I write epic fantasy under the name
+        <strong>P.S. Davis</strong>. My debut novel,
+        <a href="https://psdavisbooks.com" target="_blank" rel="noopener">The Seeker’s Wrath</a>, is out now—complete with
+        pirates, politics, and one very angry warhog.
+      </p>      
       <a href="/views/about.html" class="btn btn-outline-success">Learn More Here</a>
     
       <!-- New section for latest articles -->
